--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,6 @@ db.destination.jdbc-url=jdbc:mysql://localhost:3306/university
 db.destination.username=root
 db.destination.password=toor
 
-
 logging.level.com.zaxxer.hikari=DEBUG
 logging.level.org.springframework.jdbc.datasource = DEBUG
 logging.level.org.springframework.boot.autoconfigure.jdbc = DEBUG
@@ -24,4 +23,7 @@ logging.level.org.postgresql=DEBUG
 spring.batch.jdbc.initialize-schema=always
 batch.db.initialize-schema=ALWAYS
 server.port=8082
+
+query.bridge.url=http://localhost:8081
+
 
