Refactor endpoints and configurations for better clarity
Commented out unused dependencies and updated URL properties to be more specific. Introduced a new HealthController for service health checks and refactored paths in DatabaseConnectionController. Simplified @ComponentScan annotation in DataBridgeApplication.

--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId> <!-- For reactive REST calls if needed -->
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-webflux</artifactId> &lt;!&ndash; For reactive REST calls if needed &ndash;&gt;-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.batch</groupId>
@@ -75,7 +75,10 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
 
 
     </dependencies>
