--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ logging.level.org.postgresql=DEBUG
 spring.batch.jdbc.initialize-schema=always
 batch.db.initialize-schema=ALWAYS
 server.port=8082
-query.bridge.url=http://localhost:8081
+query.bridge.database.url=http://localhost:8081/query/bridge/database
+
 
 
