Add database connection functionality
Implemented a comprehensive database connection feature. Added a DTO for DatabaseConnectionRequest, a service for handling database connections via QueryBridgeDatabaseClient, and a REST controller for initiating connections. Updated application properties to include the query bridge URL configuration.

--- a/pom.xml
+++ b/pom.xml
@@ -65,17 +65,15 @@
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.fordevs</groupId>
-            <artifactId>dynamic-query-engine</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-security</artifactId>-->
 <!--        </dependency>-->
